# interval-tree

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile.am  README.md  TODO  configure.ac  interval.c  interval.h  itree.c  itree.h  test.c  test_list.c
src/: interval.c  interval.h  interval_list.c  itree.c  itree.h
tests/: interval.c  interval_list.c  interval_tree.c  test_list.c  test_tree.c  utils.c
